Fix foreign key errors